# LilyGO-T-Embed-CC1101-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  backlight.rs  ble_hid.rs  input.rs  main.rs  sd_card.rs  ui.rs
src/app/: ble.rs  root_menu.rs  sd_browser.rs  settings.rs  ui_node.rs
