[package]
edition      = "2024"
name         = "lilygo-rs"
rust-version = "1.88"
version      = "0.1.0"


[dependencies]
esp-hal = { path = "../../esp-hal", features = ["esp32s3", "unstable", "psram"] }

esp-rtos = { path = "../../esp-rtos", features = [
  "embassy",
  "esp-alloc",
  "esp32s3",
  "esp-radio",
  "log-04"
] }

esp-bootloader-esp-idf = { path = "../../esp-bootloader-esp-idf", features = ["esp32s3"] }

esp-alloc = { path = "../../esp-alloc", features = ["esp32s3"] }
esp-radio = { path = "../../esp-radio", features = ["ble", "esp32s3", "unstable", "log-04"] }
log = "0.4"
# rtt-target = "0.6"
embassy-executor = { version = "0.10.0", features = [] }
embassy-time = "0.5.0"

critical-section = "1.2.0"
static_cell      = { version = "2.1.1", features = ["nightly"] }
embassy-futures = "0.1"
embassy-sync     = "0.7"

display-interface-spi = "0.5"
mipidsi = { version = "0.8.0", default-features = false, features = ["batch"] }
embedded-graphics = "0.8"
embedded-hal-bus = "0.3"
mousefood = { version = "0.4.0", default-features = false, features = ["fonts"] }
ratatui = { version = "0.30", default-features = false }

# SD卡支持
embedded-hal = "1.0"
embedded-sdmmc = { version = "0.8", default-features = false }

# BLE HID dependencies
trouble-host = { version = "0.6.0", features = [
    "default-packet-pool-mtu-255",
    "derive",
    "scan",
    "security",
] }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
bt-hci = { version = "0.8.0", default-features = false }
esp-println = { version="0.16.1", features = ["esp32s3", "log-04"] }


[profile.dev]
opt-level = 3

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false
